--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         </header>
 
         <div class="categories">
+            <a href="#"><img src="categories/min.webp" alt="Minutes"><span>Minutes</span></a>
             <a href="#"><img src="categories/9.webp" alt="Grocery"><span>Grocery</span></a>
             <a href="#"><img src="categories/2.webp" alt="Mobiles"><span>Mobiles</span></a>
             <a href="#"><img src="categories/3.webp" alt="Fashion"><span>Fashion</span></a>
